welcome.lessons.welcome.array.search.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {
  var longeurTableau = nums.lenght
  for (element <-0 to longueurTableau -1){
    if ( nums(element) == lookingFor){
      return element
    }
  }
  return -1
}